add seater template to a2-detailt

--- a/public/a2-detail.html
+++ b/public/a2-detail.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
-    
-
 
 </head>
 
@@ -32,300 +30,7 @@
             {{> searchformPartial}}
         </script>
     </span>
-    <!-- <div id="sleeper-div">
-        <p id="title">Upper</p>
-        <div id="sleeper-div-lower">
-            <p>FRONT</p>
-
-            <table id="sleeper-table">
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-
-            </table>
-        </div><br>
-        <p id="title">Lower</p>
-        <div id="sleeper-div-upper">
-            <p>FRONT</p>
-
-            <table id="sleeper-table">
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="sleeper">
-                            <div class="sleeper-rec"></div>
-                        </div>
-                    </td>
-                </tr>
-
-            </table>
-        </div>
-    </div>
    
-      -->
     <div style="margin: 16px 5%">
             <div class="container-fluid">
                     <div class="row">
@@ -385,23 +90,13 @@
             
                                 </div>
                                 <div id="bustype-div" class="filter-div">
-                                    <h5>Bus Type</h5>
-                                    <div class="custom-control custom-checkbox custom-control">
-                                            <input type="checkbox" class="my-control-input custom-control-input my-checkbox" id="ac"
-                                                name="" value="1">
-                                            <label class="custom-control-label" for="ac">AC</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control">
-                                            <input type="checkbox" class="my-control-input custom-control-input my-checkbox" id="nonac"
-                                                name="" value="1">
-                                            <label class="custom-control-label" for="nonac">Non AC</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control">
+                                    <h5 class="mb-3">Bus Type</h5>
+                                    <div class="mb-2 custom-control custom-checkbox custom-control">
                                             <input type="checkbox" class="my-control-input custom-control-input my-checkbox" id="seater"
                                                 name="" value="1">
                                             <label class="custom-control-label" for="seater">Seater</label>
                                     </div>
-                                    <div class="custom-control custom-checkbox custom-control">
+                                    <div class="mb-2 custom-control custom-checkbox custom-control">
                                             <input type="checkbox" class="my-control-input custom-control-input my-checkbox" id="sleeper"
                                                 name="" value="1">
                                             <label class="custom-control-label" for="sleeper">Sleeper</label>
