--- a/public/a2-detail.html
+++ b/public/a2-detail.html
@@ -5,7 +5,7 @@
     <title>XeBooking</title>
     <link rel="icon" href="img/Logo/icon.png">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=960, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/a2.css">
@@ -35,12 +35,12 @@
             <div class="container-fluid">
                     <div class="row">
                         <div class="col-3 pl-0">
-                            <div class="container border col-12 ml-0 pt-3 pl-5 pr-3 pb-5">
+                            <div class="container border col-12 ml-0 pt-3 pl-md-3 pl-lg-5 pr-3 pb-5">
                                 <h4>Filter</h4>
                                 <div id="departure-div" class="filter-div">
                                         <h5>Departure</h5>
-                                        <div class="container">
-                                            <div class="container row">
+                                        <div class="container p-sm-0">
+                                            <div class="container row pr-sm-0">
                                                 <div class="slider-lables col-2 caption p-0">
                                                     <span id="slider-range-time-value1"></span>
                                                 </div>
@@ -65,8 +65,8 @@
                                 </div>
                                 <div id="price-div" class="filter-div">
                                         <h5>Price</h5>
-                                        <div class="container">
-                                            <div class="container row">
+                                        <div class="container p-sm-0">
+                                            <div class="container row pr-sm-0">
                                                 <div class="slider-lables col-2 caption p-0">
                                                     <span id="slider-range-price-value1"></span>
                                                 </div>
