--- a/public/b3_profile_history.html
+++ b/public/b3_profile_history.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body id="a1-body">
+<body id="b3-body">
     <div class="a1-overlay"></div>
     <span id="nav-container">
         <script id="navbar-user-template" type="text/x-handlebars-template">
@@ -26,11 +26,10 @@
         </script>
     </span>
 
-    <div class="container-fluid a3-container mt-4">
-        <div class="container-fluid">
+    <div id="b3-container" class="container-fluid  p-sm-0 a3-container mt-4">
             <div class="row d-flex justify-content-center b3-table">
                 <!-- pannel left -->
-                <div class="col-xl-2 col-lg-3 col-sm-12 panel-left a3-form d-flex flex-column b3-fixed-height">
+                <div class="col-xl-2 col-3  panel-left a3-form d-flex flex-column b3-fixed-height">
                     <h2 class="a3-title">User Profile</h2>
                     <div class="b3-options">
                         <a id="b3-link-userprofile" class="b3-choice b3-chosen" href="#">
@@ -59,7 +58,7 @@
                 <div class="col-md-1 col-sm-0"></div>
                 <!-- pannel right -->
                 <!-- profile -->
-                <div id="b3-userprofile" class="col-md-8 col-sm-12 panel-right a3-form b3-fixed-height">
+                <div id="b3-userprofile" class="col-8 col-sm-7 panel-right a3-form b3-fixed-height">
                     <div class="b3-header-profile mt-5 d-flex align-items-center justify-content-center">
                         <div class="b3-avatar">
                             <img id="b3-header-avatar" src="img/user/user.jpg" alt="">
@@ -140,7 +139,6 @@
                 </div>
                 <!-- <div class="col-md-1 col-sm-0"></div> -->
             </div>
-        </div>
     </div>
     </div>
 
