--- a/public/c2_transaction.html
+++ b/public/c2_transaction.html
@@ -48,7 +48,7 @@
     <div class="container-fluid pb-5" id="c2-filter-div">
         <div class="row mt-4 d-flex justify-content-center">
             <div class="col-3 pl-0 d-inline"style="height:850px !important; overflow: hidden;">
-                <div class="container border col-12 ml-0 pt-3 p-3 h-100">
+                <div class="container border col-12 ml-0 pt-md-3 p-md-3 h-100">
                     <h4>FILTER</h4>
                     <h5 class="mt-3">Transaction Time</h5>
                     <div id="transaction-filter-div" class="filter-div m-3">
@@ -138,10 +138,10 @@
                                     <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
                                         placeholder="From">
                                 </div>
-                                <div class="col-1 pl-0 text-centur p-0">
+                                <div class="col-1 pl-0 text-centur p-0 pl-xs-0">
                                     <i style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-5   pl-xs-0">
                                     <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
                                         placeholder="To">
                                 </div>
