change c3_report.html into admin.html

--- a/public/admin.html
+++ b/public/admin.html
@@ -40,7 +40,7 @@
                         <a class="nav-item nav-link a2-nav-link" id="nav-profile-tab"
                             href="c2_transaction.html">Transaction</a>
                         <a class="nav-item nav-link a2-nav-link active" id="nav-contact-tab"
-                            href="c3_report.html">Report</a>
+                            href="#">Report</a>
                     </div>
                 </nav>
             </div>
