--- a/public/c2_transaction.html
+++ b/public/c2_transaction.html
@@ -38,7 +38,7 @@
                     <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link a2-nav-link" id="nav-home-tab" href="c1_master-data.html">Master Data</a>
                         <a class="nav-item nav-link a2-nav-link active" id="nav-profile-tab" href="#" >Transaction</a>
-                        <a class="nav-item nav-link a2-nav-link" id="nav-contact-tab"href="c3_report.html" >Report</a>
+                        <a class="nav-item nav-link a2-nav-link" id="nav-contact-tab"href="admin.html" >Report</a>
                     </div>
                 </nav>
             </div>
