--- a/public/c1_master-data.html
+++ b/public/c1_master-data.html
@@ -32,9 +32,9 @@
             <div class="col-6">
                 <nav>
                     <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link active" id="nav-home-tab" href="c1_master-data.html">Master Data</a>
+                        <a class="nav-item nav-link active" id="nav-home-tab" href="#">Master Data</a>
                         <a class="nav-item nav-link" id="nav-profile-tab" href="c2_transaction.html">Transaction</a>
-                        <a class="nav-item nav-link " id="nav-contact-tab" href="c3_report.html">Report</a>
+                        <a class="nav-item nav-link " id="nav-contact-tab" href="admin.html">Report</a>
                     </div>
                 </nav>
             </div>
