adjust admin page

--- a/public/admin.html
+++ b/public/admin.html
@@ -184,7 +184,7 @@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <div id="home" class="container tab-pane active">
-                            <form id="formhome" action="c3_report.html">
+                            <form id="formhome" action="admin.html">
                                 <div class="container pl-5 pr-5">
                                     <div class="row row-custom">
                                         <div class="col-6">
@@ -192,7 +192,7 @@
                                                 <input placeholder="From" id="datefromID" type="text" name="datefrom"
                                                     class="datepicker-here form-control" data-language='en'
                                                     data-multiple-dates="3" data-multiple-dates-separator=", "
-                                                    data-position='top right' />
+                                                    data-position='bottom right' />
                                                 <i class="far fa-calendar-alt icon-date"></i>
                                             </div>
                                         </div>
@@ -202,7 +202,7 @@
                                                 <input placeholder="To" id="datetoID" type="text" name="dateto"
                                                     class="datepicker-here form-control" data-language='en'
                                                     data-multiple-dates="3" data-multiple-dates-separator=", "
-                                                    data-position='top right' />
+                                                    data-position='bottom right' />
                                                 <i class="far fa-calendar-alt icon-date"></i>
                                             </div>
                                         </div>
