edit profile admin

--- a/public/b3_profile_history.html
+++ b/public/b3_profile_history.html
@@ -51,7 +51,7 @@
                     </div>
                     <br><br><br>
                     <div id="logout" class="mt-auto">
-                        <a href="#">
+                        <a href="b1_log-in.html">
                             <img id="b3-logout-icon" src="img/icon/logout.svg" alt="">
                             Log out
                         </a>
